--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "58QdX8BLL9hZ"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -76,7 +76,16 @@
     "id": "-l3JrGxCL9hc",
     "outputId": "8d9dad18-c734-4a8a-ca8c-44060a40fb79"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> (3,) 1 2 3\n",
+      "[5 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3])  # Create a rank 1 array\n",
     "print(type(a), a.shape, a[0], a[1], a[2])\n",
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -95,7 +104,16 @@
     "id": "ma6mk-kdL9hh",
     "outputId": "0b54ff2f-e7f1-4b30-c653-9bf81cb8fbb0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.array([[1,2,3],[4,5,6]])   # Create a rank 2 array\n",
     "print(b)"
@@ -103,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -112,7 +130,16 @@
     "id": "ymfSHAwtL9hj",
     "outputId": "5bd292d8-c751-43b9-d480-f357dde52342"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "1 2 4\n"
+     ]
+    }
+   ],
    "source": [
     "print(b.shape)\n",
     "print(b[0, 0], b[0, 1], b[1, 0])"
@@ -129,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -138,7 +165,16 @@
     "id": "mVTN_EBqL9hn",
     "outputId": "d267c65f-ba90-4043-cedb-f468ab1bcc5d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.zeros((2,2))  # Create an array of all zeros\n",
     "print(a)"
@@ -146,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -155,7 +191,15 @@
     "id": "skiKlNmlL9h5",
     "outputId": "7d1ec1b5-a1fe-4f44-cbe3-cdeacad425f1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.ones((1,2))   # Create an array of all ones\n",
     "print(b)"
@@ -163,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -172,7 +216,16 @@
     "id": "HtFsr03bL9h7",
     "outputId": "2688b157-2fad-4fc6-f20b-8633207f0326"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 7]\n",
+      " [7 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.full((2,2), 7) # Create a constant array\n",
     "print(c)"
@@ -180,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -189,7 +242,16 @@
     "id": "-QcALHvkL9h9",
     "outputId": "5035d6fe-cb7e-4222-c972-55fe23c9d4c0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "d = np.eye(2)        # Create a 2x2 identity matrix\n",
     "print(d)"
@@ -197,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -206,7 +268,16 @@
     "id": "RCpaYg9qL9iA",
     "outputId": "25f0b387-39cf-42f3-8701-de860cc75e2e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.53868061 0.75901499]\n",
+      " [0.7271526  0.74313902]]\n"
+     ]
+    }
+   ],
    "source": [
     "e = np.random.random((2,2)) # Create an array filled with random values\n",
     "print(e)"
@@ -214,11 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "b = np.array([[[1,2,3]],[[4,5,6]]])"
+    "b = np.array([[[1,2,3]],[[4,5,6]]])\n",
+    "print(np.shape(b))"
    ]
   },
   {
@@ -733,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -742,7 +822,18 @@
     "id": "gHKvBrSKL9il",
     "outputId": "a8a924b1-9d60-4b68-8fd3-e4657ae3f08b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.  8.]\n",
+      " [10. 12.]]\n",
+      "[[ 6.  8.]\n",
+      " [10. 12.]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
     "y = np.array([[5,6],[7,8]], dtype=np.float64)\n",
@@ -1470,7 +1561,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -1484,7 +1575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
