--- a/python_intro.ipynb
+++ b/python_intro.ipynb
@@ -1479,6 +1479,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = list(range(10))\n",
+    "len(nums[::2])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "UONpMhF4L9f_"
